--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -5,15 +5,15 @@
     height: 90vh;
     .fss-heading-container {
         text-align: center;
-        border: 1px solid green;
         h1 {
-            background-color: rgb(128, 98, 0);
+            display: inline-flex;
+            padding: .5em;
+            box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
         }
     }
     .fss-image-container {
         height: 50%;
         width: 100%;
-        border: 1px solid red;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -32,7 +32,6 @@
 }
 
 .fss-paragraph-container {
-    border: 1px solid blue;
     align-self: flex-end;
     p {
         padding: 4em 6em;
@@ -41,10 +40,10 @@
 }
 
 .second-sub-section {
+    /* height: max(100vh, 120vh); */
     height: 100vh;
     .sss-content-organizer {
         height: 80%;
-        border: 1px solid green;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -87,12 +86,12 @@
                 flex-direction: column;
                 height: 100%;
                 p {
-                    width: 100%;
+                    width: 40vw;
                     max-width: 25em;
                     height: 100%;
                     /* padding: 3em;*/
-                    padding-right: .5em;
-                    padding-bottom: .5em;
+                    padding-right: 1em;
+                    padding-bottom: -10em;
                     /* padding: max(3vw, 1em); */
                     /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
                 }
@@ -109,19 +108,39 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 1px solid green;
         background-color: #f7f7f7;
         p {
-            margin: 3em;
+            margin: 6em;
+            margin-inline: 8em;
+            text-align: center;
         }
     }
 }
 
 .third-sub-section {
-    height: 100vh;
-    img {
-        width: 100%;
-        max-width: 25em;
-        height: auto;
+    min-height: 100vh;
+    margin: 5em;
+    .tss-image-container {
+        img {
+            max-height: 100%;
+            min-width: 100%;
+            object-fit: cover;
+            vertical-align: bottom;
+        }
+        ul {
+            display: flex;
+            flex-wrap: wrap;
+            list-style: none;
+            gap: 1em;
+        }
+        li {
+            height: 40vh;
+            flex-grow: 1;
+            display: inline-flex;
+        }
     }
 }
+
+
+/* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
