--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -1,146 +1,162 @@
-.first-sub-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 90vh;
-    .fss-heading-container {
-        text-align: center;
-        h1 {
-            display: inline-flex;
-            padding: .5em;
-            box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+        * {
+            font-family: customFontOne;
         }
-    }
-    .fss-image-container {
-        height: 50%;
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        img {
-            padding: 3em;
-        }
-        .fss-image-container:nth-child(1) {
-            padding-bottom: 5em;
-            height: 5em;
-        }
-        .fss-image-container:nth-child(2) {
-            align-self: flex-end;
-            height: 100%;
-        }
-    }
-}
-
-.fss-paragraph-container {
-    align-self: flex-end;
-    p {
-        padding: 4em 6em;
-        background-color: #f7f7f7;
-    }
-}
-
-.second-sub-section {
-    /* height: max(100vh, 120vh); */
-    height: 100vh;
-    .sss-content-organizer {
-        height: 80%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        .sss-first-image-desc-container {
+        
+        .first-sub-section {
             display: flex;
-            flex-direction: row;
-            justify-content: center;
-            padding-right: 10em;
-            padding-bottom: 1em;
-            .sssf-desc-container {
+            flex-direction: column;
+            justify-content: space-between;
+            height: 90vh;
+            .fss-heading-container {
+                text-align: center;
+                h1 {
+                    display: inline-flex;
+                    padding: .5em;
+                    box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+                }
+            }
+            .fss-image-container {
+                height: 50%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                img {
+                    padding: 3em;
+                }
+                .fss-image-container:nth-child(1) {
+                    padding-bottom: 5em;
+                    height: 5em;
+                }
+                .fss-image-container:nth-child(2) {
+                    align-self: flex-end;
+                    height: 100%;
+                }
+            }
+        }
+        
+        .fss-paragraph-container {
+            align-self: flex-end;
+            p {
+                padding: 4em 6em;
+                background-color: #f7f7f7;
+            }
+        }
+        
+        .second-sub-section {
+            /* height: max(100vh, 120vh); */
+            height: 100vh;
+            .sss-content-organizer {
+                height: 80%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                .sss-first-image-desc-container {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    padding-right: 10em;
+                    padding-bottom: 1em;
+                    .sssf-desc-container {
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        height: 100%;
+                        p {
+                            width: 100%;
+                            max-width: 25em;
+                            height: 100%;
+                            /* padding: 3em;*/
+                            padding-left: 1em;
+                            /* padding: max(3vw, 1em); */
+                            /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                    }
+                    img {
+                        width: 100%;
+                        max-width: 25em;
+                        height: auto;
+                    }
+                }
+                .sss-second-image-desc-container {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    padding-top: 1em;
+                    padding-left: 10em;
+                    .ssss-desc-container {
+                        display: flex;
+                        justify-content: flex-end;
+                        flex-direction: column;
+                        height: 100%;
+                        p {
+                            width: 40vw;
+                            max-width: 25em;
+                            height: 100%;
+                            /* padding: 3em;*/
+                            padding-right: 1em;
+                            padding-bottom: -10em;
+                            /* padding: max(3vw, 1em); */
+                            /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                        }
+                    }
+                    img {
+                        width: 100%;
+                        max-width: 25em;
+                        height: auto;
+                    }
+                }
+            }
+            .sss-paragraph-container {
+                height: 20%;
                 display: flex;
                 justify-content: center;
-                flex-direction: column;
-                height: 100%;
+                align-items: center;
+                background-color: #f7f7f7;
                 p {
+                    margin: 6em;
+                    margin-inline: 8em;
+                    text-align: center;
+                }
+            }
+        }
+        
+        .third-sub-section {
+            margin: 5em;
+            .tss-image-container {
+                img {
+                    max-height: 100%;
+                    min-width: 100%;
+                    object-fit: cover;
+                    vertical-align: bottom;
+                }
+                ul {
+                    display: flex;
+                    flex-wrap: wrap;
+                    list-style: none;
+                    gap: 1em;
+                }
+                li {
+                    height: 40vh;
+                    flex-grow: 1;
+                    display: inline-flex;
+                }
+            }
+            .tss-image-desc-container {
+                display: flex;
+                flex-direction: row;
+                .tss-desc-container {
+                    display: flex;
+                    align-content: stretch;
+                    height: 100%;
+                    p {}
+                }
+                img {
                     width: 100%;
                     max-width: 25em;
-                    height: 100%;
-                    /* padding: 3em;*/
-                    padding-left: 1em;
-                    /* padding: max(3vw, 1em); */
-                    /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
+                    height: auto;
                 }
             }
-            img {
-                width: 100%;
-                max-width: 25em;
-                height: auto;
-            }
         }
-        .sss-second-image-desc-container {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            padding-top: 1em;
-            padding-left: 10em;
-            .ssss-desc-container {
-                display: flex;
-                justify-content: flex-end;
-                flex-direction: column;
-                height: 100%;
-                p {
-                    width: 40vw;
-                    max-width: 25em;
-                    height: 100%;
-                    /* padding: 3em;*/
-                    padding-right: 1em;
-                    padding-bottom: -10em;
-                    /* padding: max(3vw, 1em); */
-                    /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
-                }
-            }
-            img {
-                width: 100%;
-                max-width: 25em;
-                height: auto;
-            }
-        }
-    }
-    .sss-paragraph-container {
-        height: 20%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #f7f7f7;
-        p {
-            margin: 6em;
-            margin-inline: 8em;
-            text-align: center;
-        }
-    }
-}
-
-.third-sub-section {
-    min-height: 100vh;
-    margin: 5em;
-    .tss-image-container {
-        img {
-            max-height: 100%;
-            min-width: 100%;
-            object-fit: cover;
-            vertical-align: bottom;
-        }
-        ul {
-            display: flex;
-            flex-wrap: wrap;
-            list-style: none;
-            gap: 1em;
-        }
-        li {
-            height: 40vh;
-            flex-grow: 1;
-            display: inline-flex;
-        }
-    }
-}
-
-
-/* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+        /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
 rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
