--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 header {
     height: 10vh;
+    margin-bottom: 2vh;
     nav {
+        /* position: fixed;
+        z-index: 999; */
         .navbar-main {
             display: flex;
             justify-content: space-between;
