--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -6,7 +6,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            height: 90vh;
+            height: 88vh;
             .fss-heading-container {
                 text-align: center;
                 h1 {
@@ -86,7 +86,7 @@
                     padding-left: 10em;
                     .ssss-desc-container {
                         display: flex;
-                        justify-content: flex-end;
+                        justify-content: center;
                         flex-direction: column;
                         height: 100%;
                         p {
@@ -95,7 +95,7 @@
                             height: 100%;
                             /* padding: 3em;*/
                             padding-right: 1em;
-                            padding-bottom: -10em;
+                            /* padding-bottom: -10em; */
                             /* padding: max(3vw, 1em); */
                             /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
                         }
@@ -122,9 +122,26 @@
         }
         
         .third-sub-section {
-            margin: 5em;
+            margin-top: 10em;
             .tss-image-container {
+                border: 1px solid blue;
+                margin-inline: 10em;
+                display: grid;
+                gap: 2em;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(2, 1fr);
+                justify-content: space-around;
                 img {
+                    /* max-width: 25em;
+                    height: auto; */
+                }
+                .tss-image-container:nth-child(1) {
+                    justify-self: center;
+                }
+                .tss-image-container:nth-child(2) {}
+                .tss-image-container:nth-child(3) {}
+                .tss-image-container:nth-child(4) {}
+                /* img {
                     max-height: 100%;
                     min-width: 100%;
                     object-fit: cover;
@@ -140,21 +157,32 @@
                     height: 40vh;
                     flex-grow: 1;
                     display: inline-flex;
-                }
+                } */
             }
             .tss-image-desc-container {
+                width: 100%;
+                border: 1px solid green;
+                margin-top: 10em;
                 display: flex;
-                flex-direction: row;
-                .tss-desc-container {
-                    display: flex;
-                    align-content: stretch;
-                    height: 100%;
-                    p {}
-                }
-                img {
-                    width: 100%;
-                    max-width: 25em;
-                    height: auto;
+                justify-content: center;
+                .tss-sub-container {
+                    display: inline-flex;
+                    border: 1px solid red;
+                    padding: 10em;
+                    .tss-desc-container {
+                        border: 1Px solid blue;
+                        align-self: center;
+                        p {
+                            max-width: 20vw;
+                            padding: 2em;
+                            padding-left: 3em;
+                        }
+                    }
+                    img {
+                        width: 100%;
+                        max-width: 35em;
+                        height: auto;
+                    }
                 }
             }
         }
