--- a/individual-work/wba-projekt-2/styles/_header.scss
+++ b/individual-work/wba-projekt-2/styles/_header.scss
@@ -2,6 +2,7 @@
 header {
     height: 10vh;
     margin-bottom: 2vh;
+    margin-inline: 8em;
     nav {
         /* position: fixed;
         z-index: 999; */
