--- a/individual-work/wba-projekt-2/styles/style.css
+++ b/individual-work/wba-projekt-2/styles/style.css
@@ -85,6 +85,7 @@ select {
 header {
   height: 10vh;
   margin-bottom: 2vh;
+  margin-inline: 8em;
 }
 
 header nav {
@@ -213,6 +214,10 @@ header nav .navbar-main .action span {
   font-family: customFontOne;
 }
 
+section {
+  margin-inline: 8em;
+}
+
 .first-sub-section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -271,11 +276,11 @@ header nav .navbar-main .action span {
 }
 
 .fss-paragraph-container {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  /* align-self: flex-end; */
 }
 
 .fss-paragraph-container p {
+  text-align: center;
   padding: 4em 6em;
   background-color: #f7f7f7;
 }
@@ -415,17 +420,14 @@ header nav .navbar-main .action span {
 }
 
 .third-sub-section .tss-image-container {
-  border: 1px solid blue;
   margin-inline: 10em;
   display: -ms-grid;
   display: grid;
-  gap: 2em;
+  gap: 2.5em;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   -ms-grid-rows: (1fr)[2];
       grid-template-rows: repeat(2, 1fr);
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
   /* img {
                     max-height: 100%;
                     min-width: 100%;
@@ -450,14 +452,20 @@ header nav .navbar-main .action span {
                     height: auto; */
 }
 
-.third-sub-section .tss-image-container .tss-image-container:nth-child(1) {
-  -ms-grid-column-align: center;
-      justify-self: center;
+.third-sub-section .tss-image-container div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .third-sub-section .tss-image-desc-container {
   width: 100%;
-  border: 1px solid green;
   margin-top: 10em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -471,12 +479,10 @@ header nav .navbar-main .action span {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  border: 1px solid red;
   padding: 10em;
 }
 
 .third-sub-section .tss-image-desc-container .tss-sub-container .tss-desc-container {
-  border: 1Px solid blue;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -496,6 +502,31 @@ header nav .navbar-main .action span {
 
 /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
 rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
+.footer-main {
+  margin-top: 4em;
+  padding: 1.2em;
+  border-top: 2px solid #928b8b;
+}
+
+.footer-main .footer-text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.footer-main .footer-text-container:nth-child(1) p {
+  margin-top: .4em;
+}
+
+.footer-main .footer-text-container:nth-child(1) p span {
+  text-decoration: underline;
+}
+
 html,
 body {
   scroll-behavior: smooth;
@@ -514,6 +545,5 @@ body {
   /*  background: #171717; */
   /*   background-image: linear-gradient(90deg, #1413135a 1px, transparent 0), linear-gradient(#1413135a 1px, transparent 0);
     background-size: 210px 210px; */
-  margin-inline: 8em;
 }
 /*# sourceMappingURL=style.css.map */
