--- a/individual-work/wba-projekt-2/styles/_homepage.scss
+++ b/individual-work/wba-projekt-2/styles/_homepage.scss
@@ -2,7 +2,7 @@
             font-family: customFontOne;
         }
         
-        section {
+        main {
             margin-inline: 8em;
         }
         
@@ -10,13 +10,20 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            height: 88vh;
+            height: 90vh;
             .fss-heading-container {
                 text-align: center;
+                margin-top: 2em;
                 h1 {
                     display: inline-flex;
                     padding: .5em;
+                    font-size: 3rem;
+                    transition-duration: .2s;
+                    /* box-shadow: rgba(0, 0, 0, 0.49) 0px 0px 0px 2px inset; */
+                }
+                h1:hover {
                     box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
+                    transition-duration: .2s;
                 }
             }
             .fss-image-container {
@@ -41,10 +48,16 @@
         
         .fss-paragraph-container {
             /* align-self: flex-end; */
-            p {
+            h2 {
                 text-align: center;
-                padding: 4em 6em;
-                background-color: #f7f7f7;
+                padding: 2em 4em;
+                /* background-color: #f7f7f7; */
+                font-size: 1.6rem;
+                transition-duration: .2s;
+            }
+            h2:hover {
+                transition-duration: .2s;
+                box-shadow: blue 0px -10px 0px 0px inset, rgb(255, 255, 255) 0px 5px 0px -30px, rgb(31, 193, 27) 0px 10px, rgb(255, 255, 255) 0px 15px 0px -30px, rgb(255, 217, 19) 0px 20px, rgb(255, 255, 255) 0px 25px 0px -30px, rgb(255, 156, 85) 0px 30px, rgb(255, 255, 255) 0px 35px 0px -30px, rgb(255, 85, 85) 0px 40px;
             }
         }
         
@@ -60,7 +73,7 @@
                     display: flex;
                     flex-direction: row;
                     justify-content: center;
-                    padding-right: 10em;
+                    padding-right: 14em;
                     padding-bottom: 1em;
                     .sssf-desc-container {
                         display: flex;
@@ -72,7 +85,7 @@
                             max-width: 25em;
                             height: 100%;
                             /* padding: 3em;*/
-                            padding-left: 1em;
+                            padding-left: 2em;
                             /* padding: max(3vw, 1em); */
                             /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
                         }
@@ -88,7 +101,7 @@
                     flex-direction: row;
                     justify-content: center;
                     padding-top: 1em;
-                    padding-left: 10em;
+                    padding-left: 13em;
                     .ssss-desc-container {
                         display: flex;
                         justify-content: center;
@@ -99,7 +112,7 @@
                             max-width: 25em;
                             height: 100%;
                             /* padding: 3em;*/
-                            padding-right: 1em;
+                            padding-right: 2em;
                             /* padding-bottom: -10em; */
                             /* padding: max(3vw, 1em); */
                             /* font-size: clamp(1.20rem, calc(0.94rem + 1.32vw), 1.88rem); */
@@ -117,12 +130,20 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background-color: #f7f7f7;
-                p {
-                    margin: 6em;
-                    margin-inline: 8em;
+                /* background-color: #f7f7f7; */
+                /* filter: opacity(40%); */
+                transition-duration: .2s;
+                h3 {
+                    margin: 4em;
+                    margin-inline: 6em;
                     text-align: center;
+                    font-size: 1.2rem;
                 }
+            }
+            .sss-paragraph-container:hover {
+                filter: opacity(100%);
+                transition-duration: .2s;
+                box-shadow: 0px 20px 20px 2px rgba(95, 95, 95, 0.229);
             }
         }
         
@@ -131,7 +152,7 @@
             .tss-image-container {
                 margin-inline: 10em;
                 display: grid;
-                gap: 2.5em;
+                gap: 3em;
                 grid-template-columns: repeat(2, 1fr);
                 grid-template-rows: repeat(2, 1fr);
                 img {
@@ -147,43 +168,30 @@
                 .tss-image-container:nth-child(2) {}
                 .tss-image-container:nth-child(3) {}
                 .tss-image-container:nth-child(4) {}
-                /* img {
-                    max-height: 100%;
-                    min-width: 100%;
-                    object-fit: cover;
-                    vertical-align: bottom;
-                }
-                ul {
-                    display: flex;
-                    flex-wrap: wrap;
-                    list-style: none;
-                    gap: 1em;
-                }
-                li {
-                    height: 40vh;
-                    flex-grow: 1;
-                    display: inline-flex;
-                } */
             }
             .tss-image-desc-container {
                 width: 100%;
                 margin-top: 10em;
                 display: flex;
-                justify-content: center;
                 .tss-sub-container {
                     display: inline-flex;
-                    padding: 10em;
+                    padding-inline: max(10em, 2vw);
+                    justify-content: center;
                     .tss-desc-container {
                         align-self: center;
                         p {
                             max-width: 20vw;
                             padding: 2em;
                             padding-left: 3em;
+                            font-size: 130%;
                         }
                     }
                     img {
-                        width: 100%;
+                        /* width: 100%;
                         max-width: 35em;
+                        height: auto;
+                        max-height: 35em; */
+                        max-width: 30%;
                         height: auto;
                     }
                 }
