--- a/individual-work/wba-projekt-2/styles/style.scss
+++ b/individual-work/wba-projekt-2/styles/style.scss
@@ -24,3 +24,12 @@ body {
     /*   background-image: linear-gradient(90deg, #1413135a 1px, transparent 0), linear-gradient(#1413135a 1px, transparent 0);
     background-size: 210px 210px; */
 }
+
+main {
+    img {
+        @include monochrome-image-setting;
+    }
+    img:hover {
+        @include hover-image-animation
+    }
+}
